added wheat flour, untextured milkbone dough and milkbone, all related recipes, fixed heeler tp range

--- a/src/main/resources/assets/heelermod/lang/en_us.json
+++ b/src/main/resources/assets/heelermod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.heelermod.heeler_spawn_egg": "Australian Cattle Dog Spawn Egg"
+  "item.heelermod.heeler_spawn_egg": "Australian Cattle Dog Spawn Egg",
+  "item.heelermod.wheat_flour": "Wheat Flour",
+  "item.heelermod.milkbone_dough": "Milkbone Dough",
+  "item.heelermod.milkbone": "Milkbone"
 }
